fix: add overflow

--- a/singolo2.css
+++ b/singolo2.css
@@ -38,9 +38,8 @@ body {
 }
 
 .portfolio > .container > .button-array {
-    padding-top: 10px;
+    padding-top: 9px;
     padding-left: 40px;
-    padding-bottom: 19px;
 }
 
 .portfolio > .container > .button-array > button {
@@ -63,16 +62,19 @@ body {
 }
 
 .portfolio > .container > .gallery {
+    padding-top: 19px;
     display: grid;
     grid-template:  repeat(3, 187px)/repeat(4, 220px);
     grid-gap: 20px 20px;
     justify-content: center;
+    max-height: 611px;
+    overflow: hidden;
 }
 
 .portfolio > .container > .gallery > a > img:hover {
     opacity: 0.8;
     cursor: pointer;
-    filter: drop-shadow(0px 0px 5px rgb(242, 242, 242));
+    filter: drop-shadow(0 0 5px rgb(242, 242, 242));
 }
 
 .about-us {
@@ -82,7 +84,7 @@ body {
 }
 
 .about-us > .container > .about-us-head {
-    padding-top: 69px;
+    padding-top: 68px;
     padding-left: 40px;
     font-size: 30px;
     line-height: 18px;
@@ -119,6 +121,8 @@ body {
     font-weight: 900;
     color: rgb(102, 109, 137);
     letter-spacing: 0.2px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .about-us > .container > .about-us-we > .about-us-we1 > .about-us-we-text {
@@ -133,7 +137,7 @@ body {
 }
 
 .about-us > .container > .about-us-we > .about-us-we1 > a > .about-us-we-web {
-    padding-top: 22px;
+    padding-top: 21px;
     padding-right: 3px;
 }
 
